-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.9.0
-
None
-
CentOS 7.2, Lustre-2.8.60
-
3
-
9223372036854775807
Hi, we noticed the following minor issue when trying to add our IB network 10.210.32.0/20 to nodemap:
$ lctl nodemap_add_range --name sherlock --range 10.210.[32-47].[0-255]@o2ib3 error: nodemap_add_range: nodemap ranges must be contiguous $ cat /proc/fs/lustre/nodemap/sherlock/ranges [ ]
The workaround is either to add 16 separate entries (10.210.32.[0-255], 10.210.33.[0-255] etc.), or a single larger range (whenever possible).
Thanks,
Stephan