libcfs/libcfs/util/nidstrings.c
@@ -303,10 +303,8 @@ libcfs_num_match(__u32 addr, struct list_head *numaddr)
 	return cfs_expr_list_match(addr, el);
 }
 
-static bool cfs_ip_is_contiguous(struct list_head *nidlist);
-static void cfs_ip_min_max(struct list_head *nidlist, __u32 *min, __u32 *max);
-static bool cfs_num_is_contiguous(struct list_head *nidlist);
-static void cfs_num_min_max(struct list_head *nidlist, __u32 *min, __u32 *max);
+static int cfs_ip_min_max(struct list_head *nidlist, __u32 *min, __u32 *max);
+static int cfs_num_min_max(struct list_head *nidlist, __u32 *min, __u32 *max);
 
 static struct netstrfns libcfs_netstrfns[] = {
 	{
@@ -318,7 +316,6 @@ static struct netstrfns libcfs_netstrfns[] = {
 		.nf_parse_addrlist	= libcfs_num_parse,
 		.nf_print_addrlist	= libcfs_num_addr_range_print,
 		.nf_match_addr		= libcfs_num_match,
-		.nf_is_contiguous	= cfs_num_is_contiguous,
 		.nf_min_max		= cfs_num_min_max
 	},
 	{
@@ -330,7 +327,6 @@ static struct netstrfns libcfs_netstrfns[] = {
 		.nf_parse_addrlist	= cfs_ip_addr_parse,
 		.nf_print_addrlist	= libcfs_ip_addr_range_print,
 		.nf_match_addr		= cfs_ip_addr_match,
-		.nf_is_contiguous	= cfs_ip_is_contiguous,
 		.nf_min_max		= cfs_ip_min_max
 	},
 	{
@@ -342,7 +338,6 @@ static struct netstrfns libcfs_netstrfns[] = {
 		.nf_parse_addrlist	= cfs_ip_addr_parse,
 		.nf_print_addrlist	= libcfs_ip_addr_range_print,
 		.nf_match_addr		= cfs_ip_addr_match,
-		.nf_is_contiguous	= cfs_ip_is_contiguous,
 		.nf_min_max		= cfs_ip_min_max
 	},
 	{
@@ -354,7 +349,6 @@ static struct netstrfns libcfs_netstrfns[] = {
 		.nf_parse_addrlist	= libcfs_num_parse,
 		.nf_print_addrlist	= libcfs_num_addr_range_print,
 		.nf_match_addr		= libcfs_num_match,
-		.nf_is_contiguous	= cfs_num_is_contiguous,
 		.nf_min_max		= cfs_num_min_max
 	},
 	{
@@ -366,7 +360,6 @@ static struct netstrfns libcfs_netstrfns[] = {
 		.nf_parse_addrlist	= cfs_ip_addr_parse,
 		.nf_print_addrlist	= libcfs_ip_addr_range_print,
 		.nf_match_addr		= cfs_ip_addr_match,
-		.nf_is_contiguous	= cfs_ip_is_contiguous,
 		.nf_min_max		= cfs_ip_min_max
 	},
 	{
@@ -378,7 +371,6 @@ static struct netstrfns libcfs_netstrfns[] = {
 		.nf_parse_addrlist	= libcfs_num_parse,
 		.nf_print_addrlist	= libcfs_num_addr_range_print,
 		.nf_match_addr		= libcfs_num_match,
-		.nf_is_contiguous	= cfs_num_is_contiguous,
 		.nf_min_max		= cfs_num_min_max
 	}
 };
@@ -993,38 +985,62 @@ int cfs_print_nidlist(char *buffer, int count, struct list_head *nidlist)
  * numeric address range
  *
  * \param	ar
- * \param	min_nid
- * \param	max_nid
+ * \param[out]	*min_nid __u32 representation of min NID
+ * \param[out]	*max_nid __u32 representation of max NID
+ * \retval	-EINVAL unsupported LNET range
+ * \retval	-ERANGE non-contiguous LNET range
  */
-static void cfs_ip_ar_min_max(struct addrrange *ar, __u32 *min_nid,
+static int cfs_ip_ar_min_max(struct addrrange *ar, __u32 *min_nid,
 			      __u32 *max_nid)
 {
-	struct cfs_expr_list	*el;
-	struct cfs_range_expr	*re;
-	__u32			tmp_ip_addr = 0;
-	unsigned int		min_ip[4] = {0};
-	unsigned int		max_ip[4] = {0};
-	int			re_count = 0;
+	struct cfs_expr_list *expr_list;
+	struct cfs_range_expr *range;
+	unsigned int min_ip[4] = {0};
+	unsigned int max_ip[4] = {0};
+	int cur_octet = 0;
+	bool expect_full_octet = false;
 
-	list_for_each_entry(el, &ar->ar_numaddr_ranges, el_link) {
-		list_for_each_entry(re, &el->el_exprs, re_link) {
-			min_ip[re_count] = re->re_lo;
-			max_ip[re_count] = re->re_hi;
+	list_for_each_entry(expr_list, &ar->ar_numaddr_ranges, el_link) {
+		int re_count = 0;
+
+		list_for_each_entry(range, &expr_list->el_exprs, re_link) {
+			/* XXX: add support for multiple & non-contig. re's */
+			if (re_count > 0)
+				return -EINVAL;
+
+			/* if a previous octet was ranged, then all remaining
+			 * octets must be full for contiguous range */
+			if (expect_full_octet && (range->re_lo != 0 ||
+						  range->re_hi != 255))
+				return -ERANGE;
+
+			if (range->re_stride != 1)
+				return -ERANGE;
+
+			if (range->re_lo > range->re_hi)
+				return -EINVAL;
+
+			if (range->re_lo != range->re_hi)
+				expect_full_octet = true;
+
+			min_ip[cur_octet] = range->re_lo;
+			max_ip[cur_octet] = range->re_hi;
+
 			re_count++;
 		}
+
+		cur_octet++;
 	}
 
-	tmp_ip_addr = ((min_ip[0] << 24) | (min_ip[1] << 16) |
-		       (min_ip[2] << 8) | min_ip[3]);
-
 	if (min_nid != NULL)
-		*min_nid = tmp_ip_addr;
-
-	tmp_ip_addr = ((max_ip[0] << 24) | (max_ip[1] << 16) |
-		       (max_ip[2] << 8) | max_ip[3]);
+		*min_nid = ((min_ip[0] << 24) | (min_ip[1] << 16) |
+			    (min_ip[2] << 8) | min_ip[3]);
 
 	if (max_nid != NULL)
-		*max_nid = tmp_ip_addr;
+		*max_nid = ((max_ip[0] << 24) | (max_ip[1] << 16) |
+			    (max_ip[2] << 8) | max_ip[3]);
+
+	return 0;
 }
 
 /**
@@ -1032,23 +1048,33 @@ static void cfs_ip_ar_min_max(struct addrrange *ar, __u32 *min_nid,
  * numeric address range
  *
  * \param	ar
- * \param	min_nid
- * \param	max_nid
+ * \param[out]	*min_nid __u32 representation of min NID
+ * \param[out]	*max_nid __u32 representation of max NID
+ * \retval	-EINVAL unsupported LNET range
  */
-static void cfs_num_ar_min_max(struct addrrange *ar, __u32 *min_nid,
+static int cfs_num_ar_min_max(struct addrrange *ar, __u32 *min_nid,
 			       __u32 *max_nid)
 {
-	struct cfs_expr_list	*el;
-	struct cfs_range_expr	*re;
-	unsigned int		min_addr = 0;
-	unsigned int		max_addr = 0;
+	struct cfs_expr_list *el;
+	struct cfs_range_expr *re;
+	unsigned int min_addr = 0;
+	unsigned int max_addr = 0;
 
 	list_for_each_entry(el, &ar->ar_numaddr_ranges, el_link) {
+		int re_count = 0;
+
 		list_for_each_entry(re, &el->el_exprs, re_link) {
+			if (re_count > 0)
+				return -EINVAL;
+			if (re->re_lo > re->re_hi)
+				return -EINVAL;
+
 			if (re->re_lo < min_addr || min_addr == 0)
 				min_addr = re->re_lo;
 			if (re->re_hi > max_addr)
 				max_addr = re->re_hi;
+
+			re_count++;
 		}
 	}
 
@@ -1056,143 +1082,8 @@ static void cfs_num_ar_min_max(struct addrrange *ar, __u32 *min_nid,
 		*min_nid = min_addr;
 	if (max_nid != NULL)
 		*max_nid = max_addr;
-}
 
-/**
- * Determines whether an expression list in an nidrange contains exactly
- * one contiguous address range. Calls the correct netstrfns for the LND
- *
- * \param	*nidlist
- *
- * \retval	true if contiguous
- * \retval	false if not contiguous
- */
-bool cfs_nidrange_is_contiguous(struct list_head *nidlist)
-{
-	struct nidrange		*nr;
-	struct netstrfns	*nf = NULL;
-	char			*lndname = NULL;
-	int			netnum = -1;
-
-	list_for_each_entry(nr, nidlist, nr_link) {
-		nf = nr->nr_netstrfns;
-		if (lndname == NULL)
-			lndname = nf->nf_name;
-		if (netnum == -1)
-			netnum = nr->nr_netnum;
-
-		if (strcmp(lndname, nf->nf_name) != 0 ||
-		    netnum != nr->nr_netnum)
-			return false;
-	}
-
-	if (nf == NULL)
-		return false;
-
-	if (!nf->nf_is_contiguous(nidlist))
-		return false;
-
-	return true;
-}
-
-/**
- * Determines whether an expression list in an num nidrange contains exactly
- * one contiguous address range.
- *
- * \param	*nidlist
- *
- * \retval	true if contiguous
- * \retval	false if not contiguous
- */
-static bool cfs_num_is_contiguous(struct list_head *nidlist)
-{
-	struct nidrange		*nr;
-	struct addrrange	*ar;
-	struct cfs_expr_list	*el;
-	struct cfs_range_expr	*re;
-	int			last_hi = 0;
-	__u32			last_end_nid = 0;
-	__u32			current_start_nid = 0;
-	__u32			current_end_nid = 0;
-
-	list_for_each_entry(nr, nidlist, nr_link) {
-		list_for_each_entry(ar, &nr->nr_addrranges, ar_link) {
-			cfs_num_ar_min_max(ar, &current_start_nid,
-					   &current_end_nid);
-			if (last_end_nid != 0 &&
-			    (current_start_nid - last_end_nid != 1))
-					return false;
-			last_end_nid = current_end_nid;
-			list_for_each_entry(el, &ar->ar_numaddr_ranges,
-					    el_link) {
-				list_for_each_entry(re, &el->el_exprs,
-						    re_link) {
-					if (re->re_stride > 1)
-						return false;
-					else if (last_hi != 0 &&
-						 re->re_hi - last_hi != 1)
-						return false;
-					last_hi = re->re_hi;
-				}
-			}
-		}
-	}
-
-	return true;
-}
-
-/**
- * Determines whether an expression list in an ip nidrange contains exactly
- * one contiguous address range.
- *
- * \param	*nidlist
- *
- * \retval	true if contiguous
- * \retval	false if not contiguous
- */
-static bool cfs_ip_is_contiguous(struct list_head *nidlist)
-{
-	struct nidrange		*nr;
-	struct addrrange	*ar;
-	struct cfs_expr_list	*el;
-	struct cfs_range_expr	*re;
-	int			expr_count;
-	int			last_hi = 255;
-	int			last_diff = 0;
-	__u32			last_end_nid = 0;
-	__u32			current_start_nid = 0;
-	__u32			current_end_nid = 0;
-
-	list_for_each_entry(nr, nidlist, nr_link) {
-		list_for_each_entry(ar, &nr->nr_addrranges, ar_link) {
-			last_hi = 255;
-			last_diff = 0;
-			cfs_ip_ar_min_max(ar, &current_start_nid,
-					  &current_end_nid);
-			if (last_end_nid != 0 &&
-			    (current_start_nid - last_end_nid != 1))
-					return false;
-			last_end_nid = current_end_nid;
-			list_for_each_entry(el,
-					    &ar->ar_numaddr_ranges,
-					    el_link) {
-				expr_count = 0;
-				list_for_each_entry(re, &el->el_exprs,
-						    re_link) {
-					expr_count++;
-					if (re->re_stride > 1 ||
-					    (last_diff > 0 && last_hi != 255) ||
-					    (last_diff > 0 && last_hi == 255 &&
-					     re->re_lo > 0))
-						return false;
-					last_hi = re->re_hi;
-					last_diff = re->re_hi - re->re_lo;
-				}
-			}
-		}
-	}
-
-	return true;
+	return 0;
 }
 
 /**
@@ -1200,29 +1091,34 @@ static bool cfs_ip_is_contiguous(struct list_head *nidlist)
  * and maximum nid and creates appropriate nid structures
  *
  * \param	*nidlist
- * \param	*min_nid
- * \param	*max_nid
+ * \param[out]	*min_nid string representation of min NID
+ * \param[out]	*max_nid string representation of max NID
+ * \retval	-EINVAL unsupported LNET range
+ * \retval	-ERANGE non-contiguous LNET range
  */
-void cfs_nidrange_find_min_max(struct list_head *nidlist, char *min_nid,
-			       char *max_nid, size_t nidstr_length)
+int cfs_nidrange_find_min_max(struct list_head *nidlist, char *min_nid,
+			      char *max_nid, size_t nidstr_length)
 {
-	struct nidrange		*nr;
-	struct netstrfns	*nf = NULL;
-	int			netnum = -1;
-	__u32			min_addr;
-	__u32			max_addr;
-	char			*lndname = NULL;
-	char			min_addr_str[IPSTRING_LENGTH];
-	char			max_addr_str[IPSTRING_LENGTH];
+	struct nidrange *first_nidrange;
+	int netnum;
+	struct netstrfns *nf;
+	char *lndname;
+	__u32 min_addr;
+	__u32 max_addr;
+	char min_addr_str[IPSTRING_LENGTH];
+	char max_addr_str[IPSTRING_LENGTH];
+	int rc;
 
-	list_for_each_entry(nr, nidlist, nr_link) {
-		nf = nr->nr_netstrfns;
-		lndname = nf->nf_name;
-		if (netnum == -1)
-			netnum = nr->nr_netnum;
+	first_nidrange = list_entry(nidlist->next, struct nidrange, nr_link);
 
-		nf->nf_min_max(nidlist, &min_addr, &max_addr);
-	}
+	netnum = first_nidrange->nr_netnum;
+	nf = first_nidrange->nr_netstrfns;
+	lndname = nf->nf_name;
+
+	rc = nf->nf_min_max(nidlist, &min_addr, &max_addr);
+	if (rc < 0)
+		return rc;
+
 	nf->nf_addr2str(min_addr, min_addr_str, sizeof(min_addr_str));
 	nf->nf_addr2str(max_addr, max_addr_str, sizeof(max_addr_str));
 
@@ -1230,37 +1126,53 @@ void cfs_nidrange_find_min_max(struct list_head *nidlist, char *min_nid,
 		 netnum);
 	snprintf(max_nid, nidstr_length, "%s@%s%d", max_addr_str, lndname,
 		 netnum);
+
+	return 0;
 }
 
 /**
  * Determines the min and max NID values for num LNDs
  *
  * \param	*nidlist
- * \param	*min_nid
- * \param	*max_nid
+ * \param[out]	*min_nid if provided, returns string representation of min NID
+ * \param[out]	*max_nid if provided, returns string representation of max NID
+ * \retval	-EINVAL unsupported LNET range
+ * \retval	-ERANGE non-contiguous LNET range
  */
-static void cfs_num_min_max(struct list_head *nidlist, __u32 *min_nid,
+static int cfs_num_min_max(struct list_head *nidlist, __u32 *min_nid,
 			    __u32 *max_nid)
 {
-	struct nidrange		*nr;
-	struct addrrange	*ar;
-	unsigned int		tmp_min_addr = 0;
-	unsigned int		tmp_max_addr = 0;
-	unsigned int		min_addr = 0;
-	unsigned int		max_addr = 0;
+	struct nidrange *nr;
+	struct addrrange *ar;
+	unsigned int tmp_min_addr = 0;
+	unsigned int tmp_max_addr = 0;
+	unsigned int min_addr = 0;
+	unsigned int max_addr = 0;
+	int nidlist_count = 0;
+	int rc;
 
 	list_for_each_entry(nr, nidlist, nr_link) {
+		if (nidlist_count > 0)
+			return -EINVAL;
+
 		list_for_each_entry(ar, &nr->nr_addrranges, ar_link) {
-			cfs_num_ar_min_max(ar, &tmp_min_addr,
-					   &tmp_max_addr);
+			rc = cfs_num_ar_min_max(ar, &tmp_min_addr,
+						&tmp_max_addr);
+			if (rc < 0)
+				return rc;
+
 			if (tmp_min_addr < min_addr || min_addr == 0)
 				min_addr = tmp_min_addr;
 			if (tmp_max_addr > max_addr)
 				max_addr = tmp_min_addr;
 		}
 	}
-	*max_nid = max_addr;
-	*min_nid = min_addr;
+	if (max_nid != NULL)
+		*max_nid = max_addr;
+	if (min_nid != NULL)
+		*min_nid = min_addr;
+
+	return 0;
 }
 
 /**
@@ -1268,32 +1180,46 @@ static void cfs_num_min_max(struct list_head *nidlist, __u32 *min_nid,
  * ip addresses.
  *
  * \param	*nidlist
- * \param	*min_nid
- * \param	*max_nid
+ * \param[out]	*min_nid if provided, returns string representation of min NID
+ * \param[out]	*max_nid if provided, returns string representation of max NID
+ * \retval	-EINVAL unsupported LNET range
+ * \retval	-ERANGE non-contiguous LNET range
  */
-static void cfs_ip_min_max(struct list_head *nidlist, __u32 *min_nid,
+static int cfs_ip_min_max(struct list_head *nidlist, __u32 *min_nid,
 			   __u32 *max_nid)
 {
-	struct nidrange		*nr;
-	struct addrrange	*ar;
-	__u32			tmp_min_ip_addr = 0;
-	__u32			tmp_max_ip_addr = 0;
-	__u32			min_ip_addr = 0;
-	__u32			max_ip_addr = 0;
+	struct nidrange *nr;
+	struct addrrange *ar;
+	__u32 tmp_min_ip_addr = 0;
+	__u32 tmp_max_ip_addr = 0;
+	__u32 min_ip_addr = 0;
+	__u32 max_ip_addr = 0;
+	int nidlist_count = 0;
+	int rc;
 
 	list_for_each_entry(nr, nidlist, nr_link) {
+		if (nidlist_count > 0)
+			return -EINVAL;
+
 		list_for_each_entry(ar, &nr->nr_addrranges, ar_link) {
-			cfs_ip_ar_min_max(ar, &tmp_min_ip_addr,
-					  &tmp_max_ip_addr);
+			rc = cfs_ip_ar_min_max(ar, &tmp_min_ip_addr,
+					       &tmp_max_ip_addr);
+			if (rc < 0)
+				return rc;
+
 			if (tmp_min_ip_addr < min_ip_addr || min_ip_addr == 0)
 				min_ip_addr = tmp_min_ip_addr;
 			if (tmp_max_ip_addr > max_ip_addr)
 				max_ip_addr = tmp_max_ip_addr;
 		}
+
+		nidlist_count++;
 	}
 
-	if (min_nid != NULL)
-		*min_nid = min_ip_addr;
 	if (max_nid != NULL)
 		*max_nid = max_ip_addr;
+	if (min_nid != NULL)
+		*min_nid = min_ip_addr;
+
+	return 0;
 }
